--- a/practica-1/tex/osa-revtex4-1.tex
+++ b/practica-1/tex/osa-revtex4-1.tex
@@ -36,17 +36,19 @@
 
 \section{Identifique similitudes y diferencias entre los sockets en C y en Java}
 
-Para la creación y utilización de sockets en C se utiliza la librería estandar \textit{sys/socket.h}, mientras que en Java se utiliza la librería \textit{java.net} para la creación de los mismos y algunos módulos provenientes de la librería \textit{java.io} para interactuar con los mismos a modo de lectura y escritura.
+Para la creación y utilización de sockets en C se utiliza la librería estandar \textit{sys/socket.h}, mientras que en Java se utiliza la librería \textit{java.net} para la creación de los mismos y algunos módulos provenientes de la librería \textit{java.io} para interactuar con los mismos a modo de lectura y escritura. \\
 
-Una diferencia muy marcada es el enfoque de implementación de los Sockets en ambos lenguajes. Por un lado tenemos el enfoque de Java, que cuenta con una clase \textit{java.net.Socket}. La misma permite establecer una comunicación bidireccional entre dos procesos en una red dada (el programa que define el socket y otro en la red). Además, se cuenta con la clase \textit{java.net.ServerSocket} para definir más directamente sockets que estén escuchando y aceptando conexiones desde procesos clientes.
+Una diferencia muy marcada es el enfoque de implementación de los Sockets en ambos lenguajes. Por un lado tenemos el enfoque de Java, que cuenta con una clase \textit{java.net.Socket}. La misma permite establecer una comunicación bidireccional entre dos procesos en una red dada (el programa que define el socket y otro en la red). Además, se cuenta con la clase \textit{java.net.ServerSocket} para definir más directamente sockets que estén escuchando y aceptando conexiones desde procesos clientes. \\
 
-Por otro lado, en C no se encuentra tal distinción. El modelo Cliente-Servidor puede ser implementado pero la librería no cuenta con funciones pensadas explicitamente para la realización de esta tarea. La librería \textit{sys/socket.h} expone la función \textbf{\textit{socket}} la cual permite crear un socket.
+Por otro lado, en C no se encuentra tal distinción. El modelo Cliente/Servidor puede ser implementado pero la librería no cuenta con funciones pensadas explicitamente para la realización de esta tarea. La librería \textit{sys/socket.h} expone la función \textbf{\textit{socket}} la cual permite crear un socket. \\
+
+En C, todos los sockets son representados por file descriptors, de los cuales solo se conoce un número de identificación. Estos son utilizados de la misma manera que archivos de un file system, leyendo y escribiendo en ellos con las mismas operaciones. Adicionalmente se utilizan las operaciones \textit{bind}, \textit{listen} y \textit{accept} sobre el socket servidor para darle una dirección, permitirle escuchar por conexiones y aceptarlas respectivamente.
 
 \section{Tanto en C como en Java (directorios csock-javasock):}
 
 \subsection{¿Por qué puede decirse que los ejemplos no son representativos del modelo c/s?}
 
-En el modeilo cliente/servidor (c/s), el servidor está  la espera continua de algún pedido de conexión por parte de algún cliente. Luego, el esquema general de trabajo en un modelo c/s dado el pedido de conexión es el siguiente: inicialización (o handshape), transferencia de datos, y finalización.
+En el modelo cliente/servidor (c/s), el servidor está  la espera continua de algún pedido de conexión por parte de algún cliente. Luego, el esquema general de trabajo en un modelo c/s dado el pedido de conexión es el siguiente: inicialización (o handshape), transferencia de datos, y finalización.
 
 En este caso, el servidor cierra la conexión dada la primer request y envio de respuesta. No se respetan los pasos de conexión anteriormente mencionados, pues en el ejemplo solo se realiza la transferencia de datos, sin envio de handshape o envío de mensajes de cierre de conexión.
 
@@ -54,7 +56,7 @@ En este caso, el servidor cierra la conexión dada la primer request y envio de 
 
 Se modificó la implementación del cliente y servidor de forma tal que el tamaño del buffer pueda ser definido en tiempo de compilación. (\textit{Ver implementación en la sección \ref{apendix:2b}}). \\
 
-El tamaño del buffer tanto del cliente como del servidor se fue modificando con diferentes valores para ver hasta qué cantidad de datos podía leer, se probó con los siguientes valores: $10^3$ , $10^4$ , $10^5$ y $10^6$.
+El tamaño del buffer tanto del cliente como del servidor se fue modificando con diferentes valores para ver hasta qué cantidad de datos podía leer, se probó con los siguientes valores: $10^3$ , $10^4$ , $10^5$ y $10^6$. \\
 
 El servidor pudo leer correctamente todos los caracteres para un buffer size menor o igual a $10^4$. Sin embargo, cuando se probó con un buffer size de $10^5$, solo pudo leer $\approx 65480$ caracteres.
 
@@ -68,9 +70,9 @@ Por otra parte, el servidor espera los datos, el hash y el tamaño de los datos 
 
 \subsection{Grafique el promedio y la desviación estándar de los tiempos de comunicaciones de cada comunicación. Explique el experimento realizado para calcular el tiempo de comunicaciones.}
 
-Para medir los tiempos de ejecución se utiliza la función \textit{dwalltime} (\textit{Ver implementación en la sección \ref{apendix:2d}}).
+Para medir los tiempos de ejecución se utiliza la función \textit{dwalltime} para medir el tiempo existente entre el comienzo de la transmisión de datos y la confirmación del servidor de los mismos fueron recibidos. (\textit{Ver implementación en la sección \ref{apendix:2d}}).
 
-Para la realización de los experimentos se miden los tiempos de transmisión de $10^3$, $10^4$, $10^5$, $2*10^5$ y $10^6$ bytes. Cada una de estas configuraciones se ejecutan 10 veces.
+Para la realización de los experimentos se miden los tiempos de transmisión de $10^3$, $10^4$, $10^5$ y $10^6$ bytes. Cada una de estas configuraciones se ejecutan 10 veces.
 
 Luego, los tiempos recolectados en las pruebas se utilizan para calcular la media y desviación estándar para el envío de cada cantidad de datos.
 
@@ -84,7 +86,7 @@ Luego, los tiempos recolectados en las pruebas se utilizan para calcular la medi
 \begin{figure}[H]
     \centering
     \includegraphics[width=0.45\textwidth]{graph}
-    \caption{Gráfica comparativa de las curvas gaussianas para cada escenario utilizando buffer size de $10^3$, $10^4$, $10^5$ y $2*10^5$.}
+    \caption{Gráfica comparativa de las curvas gaussianas para cada escenario utilizando buffer size de $10^3$, $10^4$ y $10^5$.}
     \label{figure:summary}
 \end{figure}
 
