--- a/practica-4/tex/osa-revtex4-1.tex
+++ b/practica-4/tex/osa-revtex4-1.tex
@@ -43,107 +43,117 @@
   \item Los nombres de las computadoras.
 \end{enumerate}
 
-Para este ejercicio se crea un agente el cual crea 10 containers, y agrega
-sus ID a una lista de tipo \texttt{ArrayList} con el fin de recordar los mismos,
-agregando al final al container inicial.
+Para este ejercicio se crea un agente el cual crea 10 containers, y agrega sus IDs a una lista de tipo \texttt{ArrayList<String>} con el fin de recordar los mismos,
+agregando al final al container inicial. \\
 
-Luego simplemente se itera sobre la lista, juntando la información
-del container en el que se encuentra. Para almacenar la información, se
-creo una clase anidada (\texttt{ContainerInfo}) la cual se utiliza para que, una vez
-conseguida la información se almacene en otra lista de tipo \texttt{ArrayList}.
-Al terminar la iteración, tenemos acceso al container origen, con
-una lista de instancias de \texttt{ContainerInfo}.
+Luego se itera sobre la lista, juntando la información
+del contenedor en el que se encuentra. Para almacenar la información, se
+crea una clase anidada (\texttt{ContainerInfo}) la cual se utiliza para que, una vez
+conseguida la información, se almacene en otra lista de tipo \texttt{ArrayList<ContainerInfo>}.
+Al terminar la iteración, tenemos acceso al container origen, con una lista de instancias de \texttt{ContainerInfo}. \\
 
 Luego se recorre esa lista imprimiendo la información correspondiente. \\
 
-Para ejecutar, se debe levantar el \texttt{jade.Boot}, esto se puede hacer
-mediante el comando \textit{make}.
-
-Simplemente se puede ejecutar \texttt{make start-gui}
-Luego, para ejecutar la implementación para este ejercicio,
-se puede ejcutar \texttt{make run-ex1}
+\textit{Ver como ejecutar la implementación en la sección \ref{apendix:ex1} del Apéndice}.
 
 \section{Programe un agente para que calcule la suma de todos los números
 almacenados en un archivo de una computadora que se le pasa como
-parámetro. Comente cómo se haríalo mismo con una aplicación
+parámetro. Comente cómo se haría lo mismo con una aplicación
 cliente/servidor. Comente que pasaría si hubiera otros sitios con
 archivos que deben ser procesados de manera similar}
 
-Para este ejercicio, se programa un agente que recibe el nombre de una computadora,
-y migra el agente.
-Una vez en la computadora destino, se realiza la lectura del archivo,
-junto con la suma.
-Al finalizar, se retora al container origen, y se muestra el resultado.\\
+Para este ejercicio, se programa el agente \texttt{SumAgent} que recibe el nombre de una computadora, y migra el agente. \\
 
-Para ejecutar, se debe levantar el \texttt{jade.Boot}, esto se puede hacer
-mediante el comando \textit{make}.
+Una vez migrado en la computadora destino, se realiza la lectura del archivo, junto con la suma.
+Al finalizar, se retorna la suma al container origen, y se muestra el resultado. \\
 
-Simplemente se puede ejecutar \textit{make start-gui}
-Luego, para ejecutar la implementación del ejercicio,
-se puede ejcutar \texttt{make run-ex2}. \\
+\textit{Ver como ejecutar la implementación en la sección \ref{apendix:ex2} del Apéndice}. \\
 
 Para realizar una implementación similar en el modelo cliente/servidor, el servidor debe poder acceder
-al filesystem del cliente. De poder hacer, puede copiarlo y trabajarlo
-localmente, para retornan un valor final.
+al filesystem del cliente. De poder hacerlo, puede copiarlo y trabajarlo localmente, para retornan un valor final.
 
-De no poder acceder al filesystem, se puede trabajar exponiendo un
-servicio que acepte un archivo, y retorne su suma.
+De no poder acceder al filesystem, se puede trabajar exponiendo un servicio que acepte un archivo, y retorne su suma. \\
 
-De todas formas, la interacción puede llegar a ser un poco menos directa,
-aunque más simple.
+De todas formas, la interacción puede llegar a ser un poco menos directa, aunque más simple.
 
-\section{Defina  e  implemente  con  agentes  un  sistema  de  archivos
-distribuido  similar  al  de  las prácticas anteriores.}
+\section{Defina  e  implemente  con  agentes  un  sistema  de  archivos distribuido  similar  al  de  las prácticas anteriores.}
 
-Para este punto, se programa un agente que pueda recibir argumentos, y
-en base a lo recibido, realiza diferentes acciones.
+Para este punto, se programa el agente \texttt{FTPAgent} que puede recibir argumentos, y en base a lo recibido, realiza diferentes acciones. \\
 
-Al ser métodos java, se reutiliza gran parte del la lógica de la
-práctica anterior.
-
-El agente comprende 3 acciones:
+\textit{\textbf{El agente comprende 3 acciones:}}
 
 \begin{itemize}
-      \item list: La acción más simple. Recibe un parámetro extra a la acción,
-            que marca cual es el directorio a listar.
-            Una vez parseados los argumentos, se realiza la migración al servidor
-            (recordemos que nos encontramos en el cliente).
-            Al terminar la migración, se leen los archivos del directorio, y se
-            almcenan en una variable de instancia del agente. Luego se vuelve al
-            cliente y se informa lo leído.\\
-
-      \item read: Recibe 2 argumentos extra a la acción, que marcan el nombre del
-            nuevo archivo y el nombre del archivo remoto (en ese orden)
-            Una vez parseados los argumentos, se realiza la migración al serviodr.
-            Al termionar la migración, se leen los primeros 2000 bytes del archivo,
-            y el tamaño total del archivo a leer y se almacenan en variables de instancia.
-            En el cliente, se realiza la copia de los 2000 bytes, y se consulta si el
-            tamaño total del archivo es menor o igual al tamaño copiado (en la primer
-            vuelta va a ser igual a 2000), de no ser asi, se suman a una variable de
-            \texttt{bytes copiados}, y se realiza la migración al servidor.
-            En el servidor se copian los siguientes 2000 bytes \texttt{a partir}
-            de los bytes copiados.(Esta acción se repite tantas veces como 
-            sea necesaria)\\
+      \item \textbf{list}
       
-      \item write: Trabaja de igual manera que el read, pero a manera inversa,
-            siendo el cliente del item anterior, el servidor, y el servidor del item
-            anterior el cliente.\\
+      Recibe como parámetro el directorio a listar.
+      Una vez parseados los argumentos, se realiza la migración al servidor. Al terminar la migración, se leen los archivos del directorio, y se almacenan en una variable de instancia del agente.
+      
+      Luego se vuelve al cliente y se informa lo leído.
+
+      \item \textbf{read}
+      
+      Recibe 2 argumentos extra a la acción, que en orden sen: 
+      \begin{itemize}
+        \item Nombre del nuevo archivo.
+        \item Nombre del archivo remoto.
+      \end{itemize}
+      
+      Una vez parseados los argumentos del lado del cliente, se realiza la migración al serviodor. Al termionar la migración, se leen los primeros 1024 bytes del archivo, y el tamaño del mismo y se almacenan en variables de instancia.
+      
+      En el cliente, se realiza la copia de los 1024 bytes, y se consulta si el tamaño total del archivo es menor o igual al tamaño copiado siendo en la primer vuelta igual a 1024. De no ser asi, se suman a una variable de \texttt{bytes copiados}, y se realiza la migración al servidor.
+      
+      En el servidor se copian los siguientes 1024 bytes \texttt{a partir} de los bytes copiados, repitiendo esta acción tantas veces como sea necesario.
+
+      \item \textbf{write}
+      
+      Trabaja de igual manera que el read, pero a manera inversa, siendo el cliente del item anterior, el servidor, y el servidor del item anterior el cliente.
 \end{itemize}
 
-Para ejecutar, se debe levantar el \texttt{jade.Boot}, esto se puede hacer
-mediante el comando \texttt{make}
+\textit{Ver como ejecutar la implementación en la sección \ref{apendix:ex3} del Apéndice}. \\
 
-Simplemente se puede ejecutar \texttt{make start-gui}
+\clearpage
 
-Luego, para interactuar con el servidor, se cuenta con el script \texttt{run}
+\onecolumngrid
 
-Para ver la sección de ayuda del comando, se puede utilizar la flag \texttt{-h}
+\section{Apéndice}
 
-\subsection{Comparación con prácticas anteriores}
+\subsection{Ejecución Ejercicio 1} \label{apendix:ex1}
 
-Esta solución, plantea más comodidad al momento de manejar los datos
-(se cuenta con una clase con atributos accesibles tanto en el cliente,
-como en el servidor). Aunque veo que el migrado de código en repetidas
-ocaciones puede llegar a generar un overhead mayor.
+Para ejecutar, se debe levantar el \texttt{jade.Boot}, esto se puede hacer mediante el comando \textit{make}. Se puede ejecutar \texttt{make start}. \\
+
+Luego, para ejecutar la implementación para este ejercicio,
+se puede ejcutar \texttt{make run-info}.
+
+\begin{minted}{sh}
+$ make
+$ make start &
+$ make run-info
+\end{minted}
+
+\subsection{Ejecución Ejercicio 2} \label{apendix:ex2}
+
+Para ejecutar, se debe levantar el \texttt{jade.Boot}, esto se puede hacer mediante el comando \textit{make}. Se puede ejecutar \textit{make start}. \\
+
+Luego, para ejecutar la implementación del ejercicio,
+se puede ejcutar \texttt{make run-sum}.
+
+\begin{minted}{sh}
+$ make
+$ make start &
+$ make run-sum
+\end{minted}
+
+\subsection{Ejecución Ejercicio 3} \label{apendix:ex3}
+
+Para ejecutar, se debe levantar el \texttt{jade.Boot}, esto se puede hacer mediante el comando \texttt{make}. Se puede ejecutar \texttt{make start}. \\
+
+Luego, para interactuar con el servidor, se cuenta con el script \texttt{run} dentro del directorio \textit{FTP}. Para ver la sección de ayuda del comando, se puede ejecutar \texttt{make run-ftp}.
+
+\begin{minted}{sh}
+$ make
+$ make start &
+$ make run-ftp # imprime ayuda
+$ ./FTP/run ... # en la ayuda se muestra como utilizar el comando
+\end{minted}
 
 \end{document}
